For some reason when I comment out the line in JavaGradlePluginPlugin which adds the --add-opens flag, the illegal access warning does not appear in `errorOuput`, but it does appear in the log in IntelliJ